--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-<h1>cr!sp - no javascript, no css.</h1>
+<pre>
+█▀▀ █▀█ █ █▀ █▀█  javascript & css free
+█▄▄ █▀▄ ▄ ▄█ █▀▀             since 2022
+</pre>
+
 <font size=7><b>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="right"><marquee direction="down" scrollamount=15>cr!sp</marquee></marquee>
-<marquee direction="left"><marquee direction="up" scrollamount=15>cr!sp</marquee></marquee>
+<marquee direction="right"><marquee direction="down" scrollamount=20>
+<pre>
+█▀▀ █▀█ █ █▀ █▀█
+█▄▄ █▀▄ ▄ ▄█ █▀▀
+<pre>
+</marquee></marquee>
+<marquee direction="left"><marquee direction="up" scrollamount=20>
+<pre>
+█▀▀ █▀█ █ █▀ █▀█
+█▄▄ █▀▄ ▄ ▄█ █▀▀
+<pre>
+</marquee></marquee>
+<marquee direction="right"><marquee direction="down" scrollamount=20>
+<pre>
+█▀▀ █▀█ █ █▀ █▀█
+█▄▄ █▀▄ ▄ ▄█ █▀▀
+<pre>
+</marquee></marquee>
+<marquee direction="left"><marquee direction="up" scrollamount=20>
+<pre>
+█▀▀ █▀█ █ █▀ █▀█
+█▄▄ █▀▄ ▄ ▄█ █▀▀
+<pre>
+</marquee></marquee>
