--- a/index.html
+++ b/index.html
@@ -10,21 +10,58 @@
 █▄▄ █▀▄ ▄ ▄█ █▀▀
 <pre>
 </marquee></marquee>
+</b></font>
+
+<fieldset>
+  <legend>[ past releases ]</legend>
+  <ul type="square">
+    <li>demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations at atk-lohja 2023</a> (1st)</li>
+  </ul>
+</fieldset>
+
+<font size=7><b>
 <marquee direction="left"><marquee direction="up" scrollamount=20>
 <pre>
 █▀▀ █▀█ █ █▀ █▀█
 █▄▄ █▀▄ ▄ ▄█ █▀▀
 <pre>
 </marquee></marquee>
+</b></font>
+
+<fieldset>
+  <legend>[ upcoming releases ]</legend>
+  <ul type="square">
+    <li>pc-demo at assembly 2023</li>
+    <li>1k intro at assembly 2023</li>
+    <li>wild at assembly 2023</li>
+    <li>pc-demo at atk-lohja 2024</li>
+  </ul>
+</fieldset>
+
+<font size=7><b>
 <marquee direction="right"><marquee direction="down" scrollamount=20>
 <pre>
 █▀▀ █▀█ █ █▀ █▀█
 █▄▄ █▀▄ ▄ ▄█ █▀▀
 <pre>
 </marquee></marquee>
+</b></font>
+
+<fieldset>
+  <legend>[ members ]</legend>
+  <ul type="square">
+    <li>koshermoney (hangaround)</li>
+    <li>salle (music)</li>
+    <li>glure (hardstyle code)</li>
+    <li>dipe (code/keynote/cables.gl/org)</li>
+  </ul>
+</fieldset>
+
+<font size=7><b>
 <marquee direction="left"><marquee direction="up" scrollamount=20>
 <pre>
 █▀▀ █▀█ █ █▀ █▀█
 █▄▄ █▀▄ ▄ ▄█ █▀▀
 <pre>
 </marquee></marquee>
+</b></font>
