--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <fieldset>
   <legend>[ past releases ]</legend>
   <ul type="square">
-    <li>demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations at atk-lohja 2023</a> (1st)</li>
+    <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations at atk-lohja 2023</a> (1st)</li>
   </ul>
 </fieldset>
 
