--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <legend>[ members ]</legend>
   <ul type="square">
     <li>koshermoney (hangaround)</li>
-    <li>salle (music)</li>
+    <li>salle (music/cables.gl)</li>
     <li>glure (hardstyle code)</li>
     <li>dipe (code/keynote/cables.gl/org)</li>
   </ul>
