--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@ creators of the finest
   <legend>[ upcoming releases ]</legend>
   <ul type="square">
     <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja 2024</a></li>
-    <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja 2024</a></li>
     <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
   </ul>
 </fieldset>
@@ -78,6 +77,7 @@ creators of the finest
 <fieldset>
   <legend>[ past releases ]</legend>
   <ul type="square">
+    <li>single scene pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja 2024 (1st)</a></li>
     <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
 
     <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly 2023</a> (12th)</li>
