--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@ creators of the finest
   <ul type="square">
     <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja 2024</a></li>
     <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
+    <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2024</a></li>
+    <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
+    <li>1k or 4k intro at <a href="http://www.assembly.org">assembly summer 2024</a></li>
   </ul>
 </fieldset>
 
@@ -77,7 +80,7 @@ creators of the finest
 <fieldset>
   <legend>[ past releases ]</legend>
   <ul type="square">
-    <li>single scene pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja 2024 (1st)</a></li>
+    <li>single scene pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja black winter 2024 (1st)</a></li>
     <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
 
     <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly 2023</a> (12th)</li>
