--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ creators of the finest
   <legend>[ upcoming releases ]</legend>
   <ul type="square">
     <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja 2024</a></li>
-    <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
+    <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024</a></li>
     <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2024</a></li>
     <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
     <li>1k or 4k intro at <a href="http://www.assembly.org">assembly summer 2024</a></li>
