--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@ creators of the finest
 <fieldset>
   <legend>[ upcoming releases ]</legend>
   <ul type="square">
-    <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja 2024</a></li>
+    <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024</a></li>
     <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024</a></li>
     <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2024</a></li>
     <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
-    <li>1k or 4k intro at <a href="http://www.assembly.org">assembly summer 2024</a></li>
+    <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2024</a></li>
   </ul>
 </fieldset>
 
@@ -83,10 +83,10 @@ creators of the finest
     <li>single scene pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja black winter 2024 (1st)</a></li>
     <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
 
-    <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly 2023</a> (12th)</li>
-    <li>ai gfx: <a href="https://files.scene.org/view/parties/2023/assembly_summer23/ai-graphics/assembly-moon-2043_by_dipe.zip">assembly moon 2043</a> at assembly 2023 (3rd)</li>
-    <li>wild demo: <a href="https://www.pouet.net/prod.php?which=94804">plur</a> at assembly 2023 (4th)</li>
-    <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations</a> at atk-lohja 2023 (1st)</li>
+    <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly summer 2023</a> (12th)</li>
+    <li>ai gfx: <a href="https://files.scene.org/view/parties/2023/assembly_summer23/ai-graphics/assembly-moon-2043_by_dipe.zip">assembly moon 2043</a> at assembly summer 2023 (3rd)</li>
+    <li>wild demo: <a href="https://www.pouet.net/prod.php?which=94804">plur</a> at assembly summer 2023 (4th)</li>
+    <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations</a> at atk-lohja summer 2023 (1st)</li>
   </ul>
 </fieldset>
 
