--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
 body {
-  font-size: 3em;
+  font-size: 2.5em;
   font-family: monospace;
 }
 
@@ -80,7 +80,7 @@ creators of the finest
 <fieldset>
   <legend>[ past releases ]</legend>
   <ul type="square">
-    <li>single scene pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja black winter 2024 (1st)</a></li>
+    <li>single scene pc-demo at atk-lohja black winter 2024 (1st)</li>
     <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
 
     <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly summer 2023</a> (12th)</li>
@@ -177,8 +177,8 @@ var mona = [
  "    cr!sp               8'-    -:8888b",
  "                       8'         8888",
  "                      d8.-=. ,==-.:888b",
- "                      >8 `~` :`~' d8888",
- "                      88         ,88888",
+ "      scroll          >8 `~` :`~' d8888",
+ "        down          88         ,88888",
  "                      88b. `-~  ':88888",
  "                      888b ~==~ .:88888",
  "                      88888o--:':::8888",
