--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@ creators of the finest
 <fieldset>
   <legend>[ upcoming releases ]</legend>
   <ul type="square">
-    <li>ai graphics at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024</a></li>
-    <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024</a></li>
     <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2024</a></li>
     <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
     <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2024</a></li>
@@ -80,6 +78,7 @@ creators of the finest
 <fieldset>
   <legend>[ past releases ]</legend>
   <ul type="square">
+    <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024 (2nd)</a></li>
     <li>single scene pc-demo at atk-lohja black winter 2024 (1st)</li>
     <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
 
