--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
     font-size: 2.5em;
     font-family: monospace;
   }
-  
+
   fieldset {
     border: 3px solid black;
   }
-  
+
   fieldset + fieldset {
     margin-top: 1em;
   }
   pre#player {
     font-size: 0.8em;
   }
-  
+
   div#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   div#playa {
     display: flex;
     justify-content: right;
   }
-  
+
   @supports (-webkit-touch-callout: none) {
     div#header {
       max-width: 100%;
     }
   }
-  
+
   @media (min-width: 1400px) {
     body {
       max-width: 1400px;
@@ -40,18 +40,18 @@
     }
   }
   </style>
-  
+
   <script src="js/asciimorph.min.js"></script>
-  
+
   <div id="header">
-  
+
     <div id="header__logo">
   <pre>
   █▀▀ █▀█ █ █▀ █▀█
   █▄▄ █▀▄ ▄ ▄█ █▀▀
   </pre>
     </div>
-  
+
     <div id="header__text">
   <pre>
   creators of the finest
@@ -59,38 +59,37 @@
   </pre>
     </div>
   </div>
-  
+
   <div id="playa">
   <pre id="player">
   </pre>
   </div>
-  
+
   <fieldset>
     <legend>[ upcoming releases ]</legend>
     <ul type="square">
-      <!-- <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2024</a></li>
-      <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2024</a></li>
-      <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2024</a></li> -->
+      <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2025</a></li>
+      <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2025</a></li>
+      <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2025</a></li>
     </ul>
   </fieldset>
-  
-  
+
   <fieldset>
     <legend>[ past releases ]</legend>
     <ul type="square">
-      <li>wild demo:  <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a> at assembly summer 2024 (3rd)</a></li>
-      <li>ai wild: <a href="https://files.scene.org/view/parties/2024/assembly_summer24/ai-wild/aquambly-summer_by_dipe.zip">aquambly summer</a> at assembly summer 2024 (shared 1st)</li>
+      <li>wild demo: <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a> at assembly summer 2024 (3rd)</a></li>
+      <li>ai wild: <a href="https://files.scene.org/view/parties/2024/assembly_summer24/ai-wild/aquambly-summer_by_dipe.zip">aquambly summer</a> at assembly summer 2024 (1st)</li>
       <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024 (2nd)</a></li>
       <li>single scene pc-demo at atk-lohja black winter 2024 (1st)</li>
       <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
-  
+
       <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly summer 2023</a> (12th)</li>
       <li>ai gfx: <a href="https://files.scene.org/view/parties/2023/assembly_summer23/ai-graphics/assembly-moon-2043_by_dipe.zip">assembly moon 2043</a> at assembly summer 2023 (3rd)</li>
       <li>wild demo: <a href="https://www.pouet.net/prod.php?which=94804">plur</a> at assembly summer 2023 (4th)</li>
       <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations</a> at atk-lohja summer 2023 (1st)</li>
     </ul>
   </fieldset>
-  
+
   <fieldset>
     <legend>[ members ]</legend>
     <ul type="square">
@@ -102,7 +101,7 @@
       <li>dipe (code/keynote/cables.gl/org)</li>
     </ul>
   </fieldset>
-  
+
   <br>
   <b>no css, no js:</b>
   <br>
@@ -114,11 +113,11 @@
   <pre>
   </marquee></marquee>
   </b></font>
-  
+
   <script>
   var element = document.querySelector('pre#player');
   AsciiMorph(element, {x: 25,y: 10});
-  
+
   var boy = [
   "",
   "",
@@ -142,7 +141,7 @@
   "    `' `\\   /`'`",
   "        `\\\"`\\\"`",
   ]
-  
+
   var bird = [
    "                                        /",
    "                                       /",
@@ -166,7 +165,7 @@
    "                       _-.//_ _||_,",
    "                         ,'  ,-'/"
    ]
-  
+
   var mona = [
   "",
   "",
@@ -190,17 +189,17 @@
    "                   /88:.__ ,       _%-' ---  -",
    "                       '''::===..-'   =  --.  `",
    ]
-  
+
   let asciis = [boy, mona, bird]
-  
+
   setTimeout(() => {
     AsciiMorph.morph(asciis[0]);
-  
+
     const morpher = setInterval(() => {
       asciis.unshift(asciis.pop());
       AsciiMorph.morph(asciis[0]);
     }, 2000);
   }, 800);
-  
-  
-  </script>  
+
+
+  </script>
