--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <fieldset>
     <legend>[ upcoming releases ]</legend>
     <ul type="square">
+      <li>ai wild at <a href="http://www.assembly.org">assembly winter 2025</a></li>
       <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2025</a></li>
       <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2025</a></li>
       <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2025</a></li>
