--- a/index.html
+++ b/index.html
@@ -68,16 +68,15 @@
   <fieldset>
     <legend>[ upcoming releases ]</legend>
     <ul type="square">
-      <li>ai wild at <a href="http://www.assembly.org">assembly winter 2025</a></li>
-      <li>pc-demo at <a href="http://www.assembly.org">assembly summer 2025</a></li>
-      <li>ai graphics at <a href="http://www.assembly.org">assembly summer 2025</a></li>
-      <li>hardstyle intro at <a href="http://www.assembly.org">assembly summer 2025</a></li>
+      <li>raspberry pi demo at <a href="http://www.atk-lohja.fi">atk-lohja 2025</a></li>
+      <li>powerpoint wild at <a href="http://www.assembly.org">assembly summer 2025</a></li>
     </ul>
   </fieldset>
 
   <fieldset>
     <legend>[ past releases ]</legend>
     <ul type="square">
+      <li>ai wild: <a href="https://www.pouet.net/prod.php?which=103715">AI DEMO 2025</a> at assembly winter 2025 (2nd)</a></li>
       <li>wild demo: <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a> at assembly summer 2024 (3rd)</a></li>
       <li>ai wild: <a href="https://files.scene.org/view/parties/2024/assembly_summer24/ai-wild/aquambly-summer_by_dipe.zip">aquambly summer</a> at assembly summer 2024 (1st)</li>
       <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024 (2nd)</a></li>
@@ -98,7 +97,6 @@
       <li>visual meri (graphics)</li>
       <li>glure (hardstyle code)</li>
       <li>salle (music/cables.gl)</li>
-      <li>koshermoney (hangaround)</li>
       <li>dipe (code/keynote/cables.gl/org)</li>
     </ul>
   </fieldset>
