--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </fieldset>
 
   <fieldset>
-    <legend>[ past releases ]</legend>
+    <legend>[ cr!spograpy ]</legend>
     <ul type="square">
       <li>ai wild: <a href="https://www.pouet.net/prod.php?which=103715">AI DEMO 2025</a> at assembly winter 2025 (2nd)</a></li>
       <li>wild demo: <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a> at assembly summer 2024 (3rd)</a></li>
@@ -93,6 +93,7 @@
   <fieldset>
     <legend>[ members ]</legend>
     <ul type="square">
+      <li>oldhandmixer (code)</li>
       <li>ezrock (ai)</li>
       <li>visual meri (graphics)</li>
       <li>glure (hardstyle code)</li>
