--- a/index.html
+++ b/index.html
@@ -68,25 +68,104 @@
   <fieldset>
     <legend>[ upcoming releases ]</legend>
     <ul type="square">
-      <li>raspberry pi demo at <a href="http://www.atk-lohja.fi">atk-lohja 2025</a></li>
-      <li>powerpoint wild at <a href="http://www.assembly.org">assembly summer 2025</a></li>
+      <li>demo at <a href="http://www.assembly.org">assembly summer 2026</a></li>
     </ul>
   </fieldset>
 
   <fieldset>
     <legend>[ cr!spography ]</legend>
     <ul type="square">
-      <li>ai wild: <a href="https://www.pouet.net/prod.php?which=103715">AI DEMO 2025</a> at assembly winter 2025 (2nd)</a></li>
-      <li>wild demo: <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a> at assembly summer 2024 (3rd)</a></li>
-      <li>ai wild: <a href="https://files.scene.org/view/parties/2024/assembly_summer24/ai-wild/aquambly-summer_by_dipe.zip">aquambly summer</a> at assembly summer 2024 (1st)</li>
-      <li>pc-demo at <a href="http://www.atk-lohja.fi">atk-lohja summer 2024 (2nd)</a></li>
-      <li>single scene pc-demo at atk-lohja black winter 2024 (1st)</li>
-      <li>ai gfx: <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a> at assembly winter 2024 (2nd)</li>
-
-      <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94803">nasty bug at assembly summer 2023</a> (12th)</li>
-      <li>ai gfx: <a href="https://files.scene.org/view/parties/2023/assembly_summer23/ai-graphics/assembly-moon-2043_by_dipe.zip">assembly moon 2043</a> at assembly summer 2023 (3rd)</li>
-      <li>wild demo: <a href="https://www.pouet.net/prod.php?which=94804">plur</a> at assembly summer 2023 (4th)</li>
-      <li>pc-demo: <a href="https://www.pouet.net/prod.php?which=94529">illuminations</a> at atk-lohja summer 2023 (1st)</li>
+      <li>
+        wild demo
+        <a href="https://www.pouet.net/prod.php?which=104636">vortex</a>
+        at
+        <a href="https://www.assembly.org">assembly</a>
+        summer 2025
+        (1st)
+      </li>
+      <li>
+        browser demo
+        <a href="https://www.pouet.net/prod.php?which=104320">after 35 years of silence</a>
+        at
+        <a href="https://www.atk-lohja.fi">atk-lohja</a>
+        2025
+        (2nd)
+      </li>
+      <li>
+        ai wild
+        <a href="https://www.pouet.net/prod.php?which=103715">AI DEMO 2025</a>
+        at
+        <a href="https://www.assembly.org">assembly</a>
+        winter 2025
+        (2nd)
+      </li>
+      <li>
+        wild demo
+        <a href="https://www.pouet.net/prod.php?which=97445">iphone keynote megademo</a>
+        at
+        <a href="https://www.assembly.org">assembly</a>
+        summer 2024
+        (3rd)
+      </li>
+      <li>
+        ai wild
+        <a href="https://files.scene.org/view/parties/2024/assembly_summer24/ai-wild/aquambly-summer_by_dipe.zip">aquambly summer</a>
+        at
+        <a href="https://www.assembly.org">assembly</a>
+        summer 2024
+        (1st)
+      </li>
+      <li>
+        pc-demo
+        <a href="https://www.pouet.net/prod.php?which=97177">sp!n</a>
+        at
+        <a href="http://www.atk-lohja.fi">atk-lohja</a>
+        summer 2024
+        (2nd)
+      </li>
+      <li>
+        single scene pc-demo at atk-lohja black winter 2024 (1st)
+      </li>
+      <li>
+        ai gfx
+        <a href="https://files.scene.org/view/parties/2024/assembly_winter24/ai-graphics/early-ai-experiments_by_ezrock-dipe-crsp.zip">early ai experiments</a>
+        at
+        <a href="https://Www.assembly.org">assembly</a>
+        winter 2024
+        (2nd)
+      </li>
+      <li>
+        pc-demo
+        <a href="https://www.pouet.net/prod.php?which=94803">nasty bug<a/>
+        at
+        <a href="https://Www.assembly.org">assembly</a>
+        summer 2023
+        (12th)
+      </li>
+      <li>
+        ai gfx
+        <a href="https://files.scene.org/view/parties/2023/assembly_summer23/ai-graphics/assembly-moon-2043_by_dipe.zip">assembly moon 2043</a>
+        at
+        <a href="https://Www.assembly.org">assembly</a>
+        summer 2023
+        (3rd)
+      </li>
+      <li>
+        wild demo
+        <a href="https://www.pouet.net/prod.php?which=94804">plur</a>
+        at
+        <a href="https://www.assembly.org">assembly</a>
+        summer 2023
+        (4th)
+      </li>
+      <li>
+        pc-demo
+        <a href="https://www.pouet.net/prod.php?which=94529">illuminations</a>
+        at
+        <a href="https://www.atk-lohja.fi">atk-lohja</a>
+        summer 2023
+        (1st)
+      </li>
     </ul>
   </fieldset>
 
